<resources>
    <string name="app_name">project-group-02-Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="collection_name">Collection Name</string>
    <string name="collection_description">Collection Description</string>
    <string name="collection_image_url">Collection Image URL</string>
    <string name="create_collection">Create Collection</string>
    <string name="title_activity_upload_art">uploadArt</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_item_page">ItemPageActivity</string>
    <string name="title_activity_browse_collections_page">BrowseCollectionsPageActivity</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="please_confirm_your_purchase">Please confirm your purchase</string>
    <string name="checkout">Checkout</string>
    <string name="home_delivery">Home Delivery</string>
</resources>