<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:gravity="center"
        android:id="@+id/Title"
        android:layout_width="360dp"
        android:layout_height="70dp"
        android:text="@string/create_collection"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text=""
        android:textColor="#FF0000"
        tools:ignore="MissingConstraints" />
    <!--tools:layout_editor_absoluteX="26dp"
    tools:layout_editor_absoluteY="117dp"-->


    <EditText
        android:id="@+id/collection_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/collection_name"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/collection_description"
        android:layout_marginBottom="30dp"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/collection_description"
        android:layout_width="211dp"
        android:layout_height="54dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/collection_description"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/collection_image_URL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/collection_description"
        android:layout_marginTop="30dp"
        android:text="@string/collection_image_url"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <Button
        android:id="@+id/create_collection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:onClick="createCollection"
        android:text="@string/create_collection"
        app:rippleColor="#F40303"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        tools:ignore="MissingConstraints" />

</RelativeLayout>